fix styling issue on mobile view

--- a/src/domain/profile/children/child/profileChildDetail.module.scss
+++ b/src/domain/profile/children/child/profileChildDetail.module.scss
@@ -15,6 +15,9 @@
     grid-template-columns: auto auto;
     gap: $baseMargin;
   }
+  @include respond-below(sm) {
+    grid-auto-flow: column;
+  }
 }
 
 .backButton {
